--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="section1"></div>
+    <div class="section2"></div>
+    <div class="section3"></div>
+    <div class="section4">
+        <div class="container">
+            <div class="text">
+                <strong class="bold">Call to action! It's time!</strong>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="sign-up">Sign up</button>
+        </div>
+    </div>
+    <div class="footer">
+        <p class="copyright">Copyright &copy; The Odin Project 2021</p>
+    </div>
 </body>
 </html>
