--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="section1"></div>
-    <div class="section2"></div>
-    <div class="section3"></div>
-    <div class="section4">
+    <div class="section1 section"></div>
+    <div class="section2 section"></div>
+    <div class="section3 section"></div>
+    <div class="section4 section">
         <div class="container">
             <div class="text">
                 <strong class="bold">Call to action! It's time!</strong>
@@ -20,7 +20,7 @@
             <button class="sign-up">Sign up</button>
         </div>
     </div>
-    <div class="footer">
+    <div class="footer section">
         <p class="copyright">Copyright &copy; The Odin Project 2021</p>
     </div>
 </body>
