Add all basic html for sections 1-4, with fixes possibly needed

--- a/index.html
+++ b/index.html
@@ -8,9 +8,49 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="section1 section"></div>
-    <div class="section2 section"></div>
-    <div class="section3 section"></div>
+    <div class="section1 section">
+        <div class="header">
+            <div>Header Logo</div>
+            <ul>
+                <li><a href="./index.html/#"></a></li>
+                <li><a href="./index.html/#"></a></li>
+                <li><a href="./index.html/#"></a></li>
+            </ul>
+        </div>
+        <div>
+            <div>
+                <p>This website</p>
+                <p>Smaller text</p>
+                <button>Sign up</button>
+            </div>
+            <img src="./imgs/kanye.jpg">
+        </div>
+    </div>
+    <div class="section2 section">
+        <p class="text">Some Random Info</p>
+        <div class="container">
+            <div class="container">
+                <img src="./imgs/kanye.jpg"></img>
+                <p class="text">Ye not hacked!</p>
+            </div>
+            <div class="container">
+                <img src="./imgs/kanye.jpg"></img>
+                <p class="text">Ye not hacked!</p>
+            </div>
+            <div class="container">
+                <img src="./imgs/kanye.jpg"></img>
+                <p class="text">Ye not hacked!</p>
+            </div>
+            <div class="container">
+                <img src="./imgs/kanye.jpg"></img>
+                <p class="text">Ye not hacked!</p>
+            </div>
+        </div>
+    </div>
+    <div class="section3 section">
+        <p class="quote">I need a room full of mirrors so I can be surrounded by winners.</p>
+        <p class="attribution">-Kanye West</p>
+    </div>
     <div class="section4 section">
         <div class="container">
             <div class="text">
