--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <div class="header">
             <div>Header Logo</div>
             <ul>
-                <li><a href="./index.html/#"></a></li>
-                <li><a href="./index.html/#"></a></li>
-                <li><a href="./index.html/#"></a></li>
+                <li><a href="./index.html/#">one</a></li>
+                <li><a href="./index.html/#">two</a></li>
+                <li><a href="./index.html/#">three</a></li>
             </ul>
         </div>
-        <div>
-            <div>
+        <div class="container">
+            <div class="text-button">
                 <p>This website</p>
                 <p>Smaller text</p>
                 <button>Sign up</button>
@@ -29,19 +29,19 @@
     <div class="section2 section">
         <p class="text">Some Random Info</p>
         <div class="container">
-            <div class="container">
+            <div class="img-container">
                 <img src="./imgs/kanye.jpg"></img>
                 <p class="text">Ye not hacked!</p>
             </div>
-            <div class="container">
+            <div class="img-container">
                 <img src="./imgs/kanye.jpg"></img>
                 <p class="text">Ye not hacked!</p>
             </div>
-            <div class="container">
+            <div class="img-container">
                 <img src="./imgs/kanye.jpg"></img>
                 <p class="text">Ye not hacked!</p>
             </div>
-            <div class="container">
+            <div class="img-container">
                 <img src="./imgs/kanye.jpg"></img>
                 <p class="text">Ye not hacked!</p>
             </div>
