Change some text and add container in section 3

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="section1 section">
         <div class="header">
-            <div>Header Logo</div>
+            <p>Header Logo</p>
             <ul>
                 <li><a href="./index.html/#">one</a></li>
                 <li><a href="./index.html/#">two</a></li>
@@ -19,15 +19,16 @@
         </div>
         <div class="container">
             <div class="text-button">
-                <p>This website</p>
-                <p>Smaller text</p>
+                <p>This website is super awesome
+                </p>
+                <p>This website is a Ye fanpage, Ye has not been hacked</p>
                 <button>Sign up</button>
             </div>
-            <img src="./imgs/kanye.jpg">
+            <img src="./imgs/kanyeandpete.jpg">
         </div>
     </div>
     <div class="section2 section">
-        <p class="text">Some Random Info</p>
+        <p class="text">Kanye got a big ass forehead</p>
         <div class="container">
             <div class="img-container">
                 <img src="./imgs/kanye.jpg"></img>
@@ -48,8 +49,10 @@
         </div>
     </div>
     <div class="section3 section">
-        <p class="quote">I need a room full of mirrors so I can be surrounded by winners.</p>
-        <p class="attribution">-Kanye West</p>
+        <div class="container">
+            <p class="quote">I need a room full of mirrors so I can be surrounded by winners.</p>
+            <p class="attribution">-Kanye West</p>
+        </div>
     </div>
     <div class="section4 section">
         <div class="container">
