Change some text and add a meme page

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
     <div class="section4 section">
         <div class="container">
             <div class="text">
-                <strong class="bold">Call to action! It's time!</strong>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <strong class="bold">Click to buy stemplayer for free!</strong>
+                <p>Get the stem player for free by clicking that button right over there!</p>
             </div>
-            <button class="sign-up">Sign up</button>
+            <button id="sign-up"><a href="./pages/dumbass.html">Get now</a></button>
         </div>
     </div>
     <div class="footer section">
-        <p class="copyright">Copyright &copy; The Odin Project 2021</p>
+        <p class="copyright">Copyright &copy; Ur moms house 2022</p>
     </div>
 </body>
 </html>
