Change text on top button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p>This website is super awesome
                 </p>
                 <p>This website is a Ye fanpage, Ye has not been hacked</p>
-                <button>Sign up</button>
+                <button>Useless button</button>
             </div>
             <img src="./imgs/kanyeandpete.jpg">
         </div>
